--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-color: gray;
+    background-color: #23022E;
     text-align: center;
 }
 
@@ -18,23 +18,33 @@ body {
 
 .modes {
     margin-bottom: 20px;
+    color: #ADA8B6;
+}
+
+.modes h1 {
+    color: #ADA8B6;
+    font-size: 90px;
 }
 
 #aiMode, #twopMode {
     padding: 15px 30px;
     font-size: 20px;
     margin: 15px;
-    background-color: #191913;
-    color: #fff;
+    background-color: #CECFC7;
+    color: #191913;
     border-radius: 10px;
     border: none;
     cursor: pointer;
+}
+.modes button:hover {
+    transform: scale(1.5);
 }
 
 .game-container {
     display: flex;
     flex-direction: column;
     align-items: center;
+    color: #F1E3F3;
 }
 
 .game {
@@ -58,7 +68,7 @@ body {
     color: #191913;
 }
 
-#reset-btn, #new-btn, #exit-btn {
+#new-btn, #exit-btn {
     padding: 15px;
     font-size: 20px;
     background-color: #191913;
